--- a/User Manual/GUI/GBX-Editor.html
+++ b/User Manual/GUI/GBX-Editor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Gearbox Editor - VECTO User Manual</title></head>
-<body>
+
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Gearbox Editor - VECTO User Manual</title></head><body>
 
 
 
@@ -81,7 +81,12 @@ defined <span style="font-weight: bold;">torque reserve</span>.</div><br><br><bi
 
 The Chart Area displays the <a href="../fileformat/VGBS.html">Shift Polygons Input File (.vgbs)</a> for the selected gear.<br><br><br><big><big style="font-weight: bold;">Torque Converter </big></big><br><hr style="height: 1px; width: 100%;">
 
-The <a href="../general/TC.html">Torque Converter Model</a> is still in development.<br><br><br><big><big style="font-weight: bold;">Controls</big></big><br><hr style="height: 1px; width: 100%;"><span style="font-weight: bold;"><img style="width: 16px; height: 16px;" alt="" src="../pics/icons/blue-document-icon.png"> New
+The <a href="../general/TC.html">Torque Converter Model</a> is still in development.<br><br>
+<span style="font-weight: bold;">Inertia</span> [kgm<sup>2</sup>]<br>
+<div style="margin-left: 40px;">Rotational inertia of the engine-side part of the torque converter. (Gearbox-side inertia is not considered in VECTO.)<br>
+</div>
+<br>
+<br><big><big style="font-weight: bold;">Controls</big></big><br><hr style="height: 1px; width: 100%;"><span style="font-weight: bold;"><img style="width: 16px; height: 16px;" alt="" src="../pics/icons/blue-document-icon.png"> New
 file</span><br>
 
 Create a new empty .vgbx
