--- a/User Manual/usermanual.html
+++ b/User Manual/usermanual.html
@@ -4,7 +4,7 @@
 <HEAD>
 <TITLE>VECTO User Manual</TITLE>
 </HEAD>
- <FRAMESET rows="82,*,50" frameborder=0>
+ <FRAMESET rows="82,*,50" frameborder="0">
 	<FRAME src="main/head.html"> 
 	<FRAMESET cols="25%, *"  >
 		<FRAME src="main/index.html">
