- Bugfix: Unit error in Cd(v) methods caused incorrect Delta-Cd value being used

--- a/User Manual/fileformat/VCDB.html
+++ b/User Manual/fileformat/VCDB.html
@@ -40,7 +40,7 @@
 <table style="background-color: white; text-align: left; height: 115px; width: 646px; margin-left: 0px;" border="1" cellpadding="2" cellspacing="1">
 
 
-<tbody><tr><th style="text-align: center; width: 227px;"><span style="color: rgb(51, 102, 255);"></span>Vair &amp; Beta [°]</th>
+<tbody><tr><th style="text-align: center; width: 227px;"><span style="color: rgb(51, 102, 255);"></span>Beta [°]</th>
 <th style="text-align: center; width: 221px;">cd Scaling Factor [-]</th>
 
 </tr>
