- Updated declaration config.

--- a/User Manual/GUI/VEH-Editor.html
+++ b/User Manual/GUI/VEH-Editor.html
@@ -98,17 +98,17 @@ Wind Correction</span></a>.<br>
 
 
 <hr style="height: 1px; width: 100%;">For each axle the parameters <span style="font-weight: bold;">Relative axle load</span>, <span style="font-weight: bold;">RRC</span><sub style="font-weight: bold;">ISO</sub> and <span style="font-weight: bold;">F</span><sub style="font-weight: bold;">zISO</sub> have to be defined in order to calculate the total <a href="../general/RRC.html">Rolling Resistance Coefficient</a>.<br>
-Furthermore the <span style="font-weight: bold;">Wheels Inertia [kgm²]</span> has to be set <span style="text-decoration: underline;">per wheel</span> for each axle. In <a href="../general/calc_Declaration.html">Declaration Mode</a> the inertia is defined automatically according to the selected tires.<br>
+Furthermore the <span style="font-weight: bold;">Wheels Inertia [kgm²]</span> has to be set <span style="text-decoration: underline;">per wheel</span> for each axle. In <a href="../general/calc_Declaration.html">Declaration Mode</a> the inertia is defined automatically according to the selected tyres.<br>
 Use the <img style="width: 16px; height: 16px;" alt="add" src="../pics/icons/plus-circle-icon.png"> and <img style="width: 16px; height: 16px;" alt="remove" src="../pics/icons/minus-circle-icon.png"> buttons to add or
 remove axles form the vehicle. Doubleclick entries to edit existing
 axle configurations.<br>
 <br>
-<span style="font-weight: bold;">Dynamic Tire Radius [mm]</span><br>
-<div style="margin-left: 40px;">Effective (dynamic) wheel radius used to calculate engine speed. In <a href="../general/calc_Declaration.html">Declaration Mode</a> the radius calculated automatically using tires/rims of the powered axle.<br>
+<span style="font-weight: bold;">Dynamic Tyre Radius [mm]</span><br>
+<div style="margin-left: 40px;">Effective (dynamic) wheel radius used to calculate engine speed. In <a href="../general/calc_Declaration.html">Declaration Mode</a> the radius calculated automatically using tyres/rims of the powered axle.<br>
 </div>
 <br>
 <span style="font-weight: bold;">Powered axle tyres/rims</span><br>
-<div style="margin-left: 40px;">Needed for <a href="../general/calc_Declaration.html">Declaration Mode</a> to calculate the dynamic tire radius.</div>
+<div style="margin-left: 40px;">Needed for <a href="../general/calc_Declaration.html">Declaration Mode</a> to calculate the dynamic tyre radius.</div>
 <br>
 <br>
 <big><big style="font-weight: bold;">Retarder Losses</big></big><br>
