- User Manual update - Fix in JIRA dialog

--- a/User Manual/GUI/mainform.html
+++ b/User Manual/GUI/mainform.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Main Form - VECTO User Manual</title></head>
-<body>
+
+
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Main Form - VECTO User Manual</title></head><body>
 
 <div style="text-align: left;">
 
@@ -177,7 +178,19 @@ editor</li>
 <li style="font-weight: bold;">User Manual</li>
 <ul>
 <li style="font-weight: bold;"><span style="font-weight: normal;">Opens this User Manual</span></li>
-</ul><li style="font-weight: bold;">Create Activation File</li>
+</ul>
+  <li style="font-weight: bold;"><span style="font-weight: normal;"><span style="font-weight: bold;">Release Notes</span></span></li>
+  <ul>
+    <li style="font-weight: bold;"><span style="font-weight: normal;">Open the Release Notes (pdf)<br>
+</span></li>
+  </ul>
+  <li style="font-weight: bold;"><span style="font-weight: normal;"><span style="font-weight: bold;">Report Bug via CITnet / JIRA</span></span></li>
+  <ul>
+    <li style="font-weight: bold;"><span style="font-weight: normal;">Opens the CITnet/JIRA website for reporting bugs<br>
+</span></li>
+  </ul>
+
+<li style="font-weight: bold;">Create Activation File</li>
 <ul>
 <li style="font-weight: bold;"><span style="font-weight: normal;">Create an Activation File used
 for Licensing</span></li>
