--- a/User Manual/fileformat/VMOD.html
+++ b/User Manual/fileformat/VMOD.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Modal Results - VECTO User Manual</title></head>
-<body>
+
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Modal Results - VECTO User Manual</title></head><body>
 
 
 
@@ -9,7 +9,7 @@
 <hr style="width: 100%; height: 0px;"><div style="margin-left: 40px;"><div style="text-align: left;"><span style="font-family: Times New Roman,Times,serif;">Modal
 results are only created if enabled in the <a href="../GUI/mainform.html">Options</a> tab</span>.
 One file is created for each&nbsp;calculation and stored in the&nbsp;same directory as the .vecto file.<br><br>&nbsp;<span style="font-weight: bold;">Quantities:</span><br><table style="width: 100%;" border="1" cellpadding="5" cellspacing="0">
-<col span="2" style="width: 60pt;" width="80">
+<col style="width: 60pt;" span="2" width="80">
 <tbody>
 <tr>
 <td style="font-weight: bold; width: 95px;">Name</td>
@@ -77,7 +77,7 @@ Eng</span>).</td>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt; width: 95px;" height="20">Gear</td>
 <td style="width: 66px;">[-]</td>
-<td style="width: 757px;">Gear. "0" = clutch opened / neutral. "0.5" =&nbsp;lock-up clutch is open (AT with torque converter only, see <a href="../GUI/GBX-Editor.html">Gearbox</a>)</td>
+<td style="width: 757px;">Gear. "0" = clutch opened / neutral.</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt; width: 95px;" height="20">Ploss
@@ -152,9 +152,9 @@ Veh</td>
 </tr>
 
 <tr style="height: 15pt;" height="20">
-<td style="height: 15pt; width: 95px;" height="20">FC</td>
+<td style="height: 15pt; width: 95px;" height="20">FC-Map</td>
 <td style="width: 66px;">[g/h]</td>
-<td style="width: 757px;">Fuel consumption from FC map..</td>
+<td style="width: 757px;">Fuel consumption interpolated from FC map.</td>
 </tr><tr><td>FC-AUXc</td><td>[g/h]</td><td>Fuel consumption after <a href="../general/FC.html">Auxiliary-Start/Stop Correction</a>. (Based on FC.)</td></tr><tr><td>FC-WHTCc</td><td>[g/h]</td><td>Fuel consumption after <a href="../general/FC.html">WHTC Correction</a>. (Based on FC-AUXc.)</td></tr><tr><td>TC&#957;</td><td>[-]</td><td>Torque converter speed ratio</td></tr><tr><td>TC&#956;</td><td>[-]</td><td>Torque converter torque ratio</td></tr><tr><td>TC_M_Out</td><td>[Nm]</td><td>Torque converter output torque</td></tr><tr><td>TC_n_Out</td><td>[1/min]</td><td>Torque converter output speed</td></tr>
 </tbody>
 </table>
