--- a/User Manual/main/index.html
+++ b/User Manual/main/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
+
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>VECTO User Manual</title>
 <style>
 li+ul {margin-left: -1.5em}
-</style>
-
-</head><body>
+</style></head><body>
 
 <ul style="text-align: left; font-family: Calibri; line-height: 1.7em;">
   <li><a target="mainframe" href="../main/changelog.html">Changelog</a></li>
@@ -42,6 +41,7 @@ li+ul {margin-left: -1.5em}
     <li><a target="mainframe" href="../general/Shift.html">Gear Shift Model</a></li>
     <li><a target="mainframe" href="../general/LAC.html">Look-Ahead Coasting</a></li>
     <li><a target="mainframe" href="../general/EcoRoll.html">Overspeed</a></li> 
+    <li><a target="mainframe" href="../general/PwheelInput.html">P<sub>wheel</sub>-Input (SiCo Mode)</a></li> 
     <li><a target="mainframe" href="../general/RRC.html">Roll Resistance Coefficient</a></li>	
 	<li><a target="mainframe" href="../general/TC.html">Torque Converter Model</a></li>
 	<li><a target="mainframe" href="../general/PT1.html">Transient Full Load (PT1 approach)</a></li>
@@ -86,6 +86,4 @@ li+ul {margin-left: -1.5em}
 
 
 
-</body>
-
-</html>
+</body></html>
