--- a/User Manual/fileformat/VSUM.html
+++ b/User Manual/fileformat/VSUM.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1"><title>Summary Results - VECTO User Manual</title></head>
-<body>
+
+<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1"><title>Summary Results - VECTO User Manual</title></head><body>
 
 
 
@@ -17,168 +17,202 @@
 </span><span style="font-weight: bold;">Quantities:</span><br>
 <span style="font-family: Verdana;"></span>
 <table style="width: 100%;" border="1" cellpadding="5" cellspacing="0">
-<col span="2" style="width: 60pt;" width="80">
+<col style="width: 60pt;" span="2" width="80">
 <tbody>
 <tr>
 <td style="font-weight: bold;">Name</td>
-<td style="font-weight: bold;">Unit</td>
-<td style="font-weight: bold;">Description</td>
+<td style="font-weight: bold; width: 109px;">Unit</td>
+<td style="font-weight: bold; width: 1342px;">Description</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt; width: 60pt;" height="20" width="80">Job</td>
-<td style="width: 60pt;" width="80">[-]</td>
-<td>Job number. Format is "x-y" with x = file number and y
+<td style="width: 109px;">[-]</td>
+<td style="width: 1342px;">Job number. Format is "x-y" with x = file number and y
 = cycle number</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Input
 File</td>
-<td>[-]</td>
-<td>Name of the input file</td>
+<td style="width: 109px;">[-]</td>
+<td style="width: 1342px;">Name of the input file</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Cycle</td>
-<td>[-]</td>
-<td>Name of the cycle file</td>
+<td style="width: 109px;">[-]</td>
+<td style="width: 1342px;">Name of the cycle file</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">time</td>
-<td>[s]</td>
-<td>Total simulation&nbsp;time</td>
+<td style="width: 109px;">[s]</td>
+<td style="width: 1342px;">Total simulation&nbsp;time</td>
 </tr>
 
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">distance</td>
-<td>[km]</td>
-<td>Total travelled distance</td>
+<td style="width: 109px;">[km]</td>
+<td style="width: 1342px;">Total travelled distance</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">speed</td>
-<td>[km/h]</td>
-<td>Average vehicle speed</td>
+<td style="width: 109px;">[km/h]</td>
+<td style="width: 1342px;">Average vehicle speed</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">&#8710;altitude</td>
-<td>[m]</td>
-<td>Altitude difference between start and end of cycle</td>
+<td style="width: 109px;">[m]</td>
+<td style="width: 1342px;">Altitude difference between start and end of cycle</td>
 </tr>
 
 
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Ppos</td>
-<td>[kW]</td>
-<td>Average&nbsp;positive engine power</td>
+<td style="width: 109px;">[kW]</td>
+<td style="width: 1342px;">Average&nbsp;positive engine power</td>
 </tr>
+    <tr>
+      <td style="vertical-align: top;">PwheelPos<br>
+      </td>
+      <td style="vertical-align: top;">[kW]<br>
+      </td>
+      <td style="vertical-align: top;">Average positive wheel power<br>
+      </td>
+    </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Pneg</td>
-<td>[kW]</td>
-<td>Average&nbsp;negative engine power</td>
+<td style="width: 109px;">[kW]</td>
+<td style="width: 1342px;">Average&nbsp;negative engine power</td>
 </tr>
 <tr style="height: 15pt;" height="20">
-<td style="height: 15pt;" height="20">FC</td>
-<td>[g/km]</td>
-<td>Average fuel consumption</td>
+<td style="height: 15pt;" height="20">FC-Final</td>
+<td style="width: 109px;">[g/km] &amp; [l/100km] &amp; [l/100tkm]<br>
+</td>
+<td style="width: 1342px;">Average fuel consumption. Final value after all corrections.<br>
+</td>
 </tr>
-<tr><td>FC-AUXc</td><td>[g/km]</td><td>Fuel consumption after <a href="../general/FC.html">Auxiliary-Start/Stop Correction</a>. (Based on FC.)</td></tr><tr><td>FC-WHTCc</td><td>[g/km]</td><td>Fuel consumption after <a href="../general/FC.html">WHTC Correction</a>. (Based on FC-AUXc.)</td></tr><tr style="height: 15pt;" height="20">
+    <tr>
+      <td style="vertical-align: top;">FC-Map<br>
+      </td>
+      <td style="vertical-align: top; width: 109px;">[g/h] &amp; [g/km]<br>
+      </td>
+      <td style="vertical-align: top; width: 1342px;">Fuel consumption interpolated form <a href="../general/FC.html">Fuel Map</a>.<br>
+      </td>
+    </tr>
+<tr><td>FC-AUXc</td><td style="width: 109px;">[g/h] &amp; [g/km]</td><td style="width: 1342px;">Fuel consumption after <a href="../general/FC.html">Auxiliary-Start/Stop Correction</a>. (Based on FC-Map.)</td></tr><tr><td>FC-WHTCc</td><td style="width: 109px;">[g/h] &amp; [g/km]</td><td style="width: 1342px;">Fuel consumption after <a href="../general/FC.html">WHTC Correction</a>. (Based on FC-AUXc.)</td></tr><tr>
+      <td style="vertical-align: top;">CO<sub>2</sub><br>
+      </td>
+      <td style="vertical-align: top;">[g/km] &amp; [g/tkm]<br>
+      </td>
+      <td style="vertical-align: top;">Average CO<sub>2</sub> emissions.<br>
+      </td>
+    </tr>
+<tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Pbrake</td>
-<td>[kW]</td>
-<td>Average brake power (not including engine drag)</td>
+<td style="width: 109px;">[kW]</td>
+<td style="width: 1342px;">Average brake power (not including engine drag)</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">EposICE</td>
-<td>[kWh]</td>
-<td>Total positive engine work</td></tr><tr style="height: 15pt;" height="20"><td style="height: 15pt;" height="20">EnegICE</td>
-<td>[kWh]</td>
-<td>Total negative engine work (engine brake)</td>
+<td style="width: 109px;">[kWh]</td>
+<td style="width: 1342px;">Total positive engine work</td></tr><tr style="height: 15pt;" height="20"><td style="height: 15pt;" height="20">EnegICE</td>
+<td style="width: 109px;">[kWh]</td>
+<td style="width: 1342px;">Total negative engine work (engine brake)</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Eair</td>
-<td>[kWh]</td>
-<td>Total work of air resistance</td>
+<td style="width: 109px;">[kWh]</td>
+<td style="width: 1342px;">Total work of air resistance</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Eroll</td>
-<td>[kWh]</td>
-<td>Total work of rolling resistance</td>
+<td style="width: 109px;">[kWh]</td>
+<td style="width: 1342px;">Total work of rolling resistance</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Egrad</td>
-<td>[kWh]</td>
-<td>Total work of gradient resistance</td>
+<td style="width: 109px;">[kWh]</td>
+<td style="width: 1342px;">Total work of gradient resistance</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Eacc</td>
-<td>[kWh]</td>
-<td>Total work from accelerations (&lt;0) / decelerations (&gt;0)&nbsp;</td>
+<td style="width: 109px;">[kWh]</td>
+<td style="width: 1342px;">Total work from accelerations (&lt;0) / decelerations (&gt;0)&nbsp;</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Eaux</td>
-<td>[kWh]</td>
-<td>Total energy demand of auxiliaries</td>
+<td style="width: 109px;">[kWh]</td>
+<td style="width: 1342px;">Total energy demand of auxiliaries</td>
 </tr>
-<tr><td>Eaux_xxx</td><td>[kWh]</td><td>Energy demand of auxiliary with ID <span style="font-style: italic; font-weight: bold;">xxx</span>. See also <a href="../GUI/VECTO-Editor_Aux.html">Aux Dialog</a> and <a href="VDRI.html">Driving Cycle</a>.</td></tr><tr style="height: 15pt;" height="20">
+<tr><td>Eaux_xxx</td><td style="width: 109px;">[kWh]</td><td style="width: 1342px;">Energy demand of auxiliary with ID <span style="font-style: italic; font-weight: bold;">xxx</span>. See also <a href="../GUI/VECTO-Editor_Aux.html">Aux Dialog</a> and <a href="VDRI.html">Driving Cycle</a>.</td></tr><tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Ebrake</td>
-<td>[kWh]</td>
-<td>Total work dissipated in mechanical braking (sum of service brakes, retader and additional engine exhaust brakes)</td>
+<td style="width: 109px;">[kWh]</td>
+<td style="width: 1342px;">Total work dissipated in mechanical braking (sum of service brakes, retader and additional engine exhaust brakes)</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Etransm</td>
-<td>[kWh]</td>
-<td>Total work of transmission losses</td>
+<td style="width: 109px;">[kWh]</td>
+<td style="width: 1342px;">Total transmission losses</td>
 </tr>
-<tr><td>Eretarder</td><td>[kWh]</td><td>Total retarder losses</td></tr><tr style="height: 15pt;" height="20">
+<tr><td>Eretarder</td><td style="width: 109px;">[kWh]</td><td style="width: 1342px;">Total retarder losses</td></tr><tr>
+      <td style="vertical-align: top;">Etorqueconv<br>
+      </td>
+      <td style="vertical-align: top;">[kWh]<br>
+      </td>
+      <td style="vertical-align: top;">Total torque converter losses<br>
+      </td>
+    </tr>
+<tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Mass</td>
-<td>[kg]</td>
-<td>Vehicle mass (equals <span style="font-weight: bold;">Curb Weight Vehicle</span>
+<td style="width: 109px;">[kg]</td>
+<td style="width: 1342px;">Vehicle mass (equals <span style="font-weight: bold;">Curb Weight Vehicle</span>
 plus <span style="font-weight: bold;">Curb Weight Extra
 Trailer/Body</span>, see <a href="../GUI/VEH-Editor.html">Vehicle
 Editor</a>)</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Loading</td>
-<td>[kg]</td>
-<td>Vehicle loading (see <a href="../GUI/VEH-Editor.html">Vehicle Editor</a>)</td>
+<td style="width: 109px;">[kg]</td>
+<td style="width: 1342px;">Vehicle loading (see <a href="../GUI/VEH-Editor.html">Vehicle Editor</a>)</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">a</td>
-<td>[m/s<sup>2</sup>]</td>
-<td>Average acceleration</td>
+<td style="width: 109px;">[m/s<sup>2</sup>]</td>
+<td style="width: 1342px;">Average acceleration</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">a_pos</td>
-<td>[m/s<sup>2</sup>]</td>
-<td>Average&nbsp;acceleration in&nbsp;acceleration
+<td style="width: 109px;">[m/s<sup>2</sup>]</td>
+<td style="width: 1342px;">Average&nbsp;acceleration in&nbsp;acceleration
 phases*</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">a_neg</td>
-<td>[m/s<sup>2</sup>]</td>
-<td>Average deceleration in deceleration phases*</td>
+<td style="width: 109px;">[m/s<sup>2</sup>]</td>
+<td style="width: 1342px;">Average deceleration in deceleration phases*</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">Acc.Noise</td>
-<td>[m/s<sup>2</sup>]</td>
-<td>Acceleration noise</td>
+<td style="width: 109px;">[m/s<sup>2</sup>]</td>
+<td style="width: 1342px;">Acceleration noise</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">pAcc</td>
-<td>[%]</td>
-<td>Time share of acceleration phases*</td>
+<td style="width: 109px;">[%]</td>
+<td style="width: 1342px;">Time share of acceleration phases*</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">pDec</td>
-<td>[%]</td>
-<td>Time share of deceleration phases*</td>
+<td style="width: 109px;">[%]</td>
+<td style="width: 1342px;">Time share of deceleration phases*</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">pCruise</td>
-<td>[%]</td>
-<td>Time share of cruise phases*</td>
+<td style="width: 109px;">[%]</td>
+<td style="width: 1342px;">Time share of cruise phases*</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt;" height="20">pStop</td>
-<td>[%]</td>
-<td>Time share of stop phases*</td>
+<td style="width: 109px;">[%]</td>
+<td style="width: 1342px;">Time share of stop phases*</td>
 </tr>
 </tbody>
 </table>
