GUI Update für Retarder

--- a/User Manual/GUI/VEH-Editor.html
+++ b/User Manual/GUI/VEH-Editor.html
@@ -8,6 +8,7 @@
 
 
 
+
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Vehicle Editor - VECTO User Manual</title></head><body>
 
 <div style="text-align: left;">
@@ -123,8 +124,9 @@ axle configurations.<br>
 Three options are available:<br>
 
 <ul>
-<li>None</li><li>Primary (before gearbox): The rpm ratio is relative to the
-engine speed</li><li>Secondary (after gearbox): The rpm ratio is relative to the
+<li>Included in Transmission Loss Maps: Use this if the <a href="../fileformat/VTLM.html">Transmission Loss Maps</a> already include retarder losses.<br>
+</li><li>Primary Retarder (before gearbox): The rpm ratio is relative to the
+engine speed</li><li>Secondary Retarder (after gearbox): The rpm ratio is relative to the
 cardan shaft speed</li>
 </ul>
 
